Updated README with dependencies

--- a/chord_detector.ipynb
+++ b/chord_detector.ipynb
@@ -275,13 +275,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "cf0dc4f8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'X_train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Create and train the model\u001b[39;00m\n\u001b[32m      2\u001b[39m model = DecisionTreeClassifier(random_state=\u001b[32m42\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m model.fit(\u001b[43mX_train\u001b[49m, y_train)\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m# Predict on test set\u001b[39;00m\n\u001b[32m      6\u001b[39m y_pred = model.predict(X_test)\n",
+      "\u001b[31mNameError\u001b[39m: name 'X_train' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Create and train the model\n",
-    "model = DecisionTreeClassifier(n_estimators=100, random_state=42)\n",
+    "model = DecisionTreeClassifier(random_state=42)\n",
     "model.fit(X_train, y_train)\n",
     "\n",
     "# Predict on test set\n",
