Show data before training

--- a/chord_detector.ipynb
+++ b/chord_detector.ipynb
@@ -158,6 +158,40 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1e1438f9",
+   "metadata": {},
+   "source": [
+    "### Show Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "0c0bf310",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chroma Data: \n",
+      "[9.62330966e-02 4.44600789e-02 1.48689895e-02 1.32211411e-01\n",
+      " 1.67414447e-02 1.54689434e-01 3.21274511e-01 1.82779857e-01\n",
+      " 3.86258586e-01 9.13299550e-02 1.71510005e-03 2.37657174e+00]\n",
+      "Chord Label: \n",
+      "Amin\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Chroma Data: \")\n",
+    "print(X[0])\n",
+    "print(\"Chord Label: \")\n",
+    "print(y[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7ffd6da6",
    "metadata": {},
    "source": [
